--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +43,5 @@
   "devDependencies": {
     "ajv": "^8.17.1"
   },
-  "homepage": "https://stven-howl.githun.io/react-for-beginners"
+  "homepage": "https://stven-howl.github.io/react-for-beginners"
 }
